--- a/style.css
+++ b/style.css
@@ -1,45 +1,79 @@
-
-@media screen and (min-width: 1200px) {
-    header {
-        height: 750px;
-    }
-  }
-  
-  @media screen and (max-width: 1000px) {
-    header {
-        height: 500px;
-        background-position: center;
-    }
-  }
-  
-  header{
+header{
     background-image: url(header.png);
-    background-repeat: no-repeat;
-    background-size: cover;
     color: whitesmoke;
-    
+    height: 5em;    
 }
 
 nav{
+    position: fixed;
     display: flex;
+    width: 100%;
     justify-content: space-between;
-}
-h1{
-    font-size: 5vw;
-    font-family: 'Bangers', cursive;
-    letter-spacing: 10px;
-}
-h3{
-    font-size: 3vw;
-    font-family: 'Cookie', cursive;
 }
 .left{
     display: flex;
     width: 40%;
     justify-content: space-evenly;
-    margin-top: 1em;
 }
+.page1{
+    color: whitesmoke;
+    background-image: url(header.png);
+    background-size: cover;
+}
+h1{
+    margin-top: 0;
+    padding-top: 1em;
+    font-size: 6vw;
+    font-family: 'Archivo Black', sans-serif;
+    letter-spacing: 3px;
+}
+h2{
+    margin-top: -30px;
+    font-size: 5vw;
+    font-family: 'Archivo Black', sans-serif;
+    letter-spacing: 3px;
+}
+h3{
+    margin-top: -30px;
+    font-size: 1vw;
+    letter-spacing: 1px;
+}
+
 .nama{
-    margin-top: 5em;
-    margin-left: 5em;
+    margin-left: 18em;
+    padding-bottom: 20em;
+}
+.socmed{
+    position: fixed;
+    top: 40%;
+    left: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 10em;
+}
+.satu{
+    position: absolute;
+    right: 5%;
+    top: 30%;
+    color: gold;
+    font-size: 2vw;
+    font-family: 'Archivo Black', sans-serif;
+}
+.tex{
+    position: absolute;
+    right: 4.6%;
+    top: 37%;
+    color: white;
+    font-family: 'Archivo Black', sans-serif;
+    writing-mode: tb-rl;
+}
+.text{
+    position: absolute;
+    right: 5%;
+    top: 43%;
+    color:grey;
+    font-family: 'Archivo Black', sans-serif;
+    writing-mode: tb-rl;
+    letter-spacing: 4px;
 }
